removing unused benchmarks adding CHANGES